Fix scrolling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
     
     /* USER002: Fix scrolling on mobile devices */
     
-    position: absolute;
+    position: fixed;
 }
 
 /* Google Components */
@@ -65,14 +65,18 @@ body {
 #map {
     height: 100%;
     padding-top: 50px;
+    position: fixed;
 }
 
 #blog {
     height: 100%;
     padding-top: 50px;
+    position: fixed;
+
 }
 
 #about {
     height: 100%;
     padding-top: 50px;
+    position: fixed;
 }
